--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.4",
+    "tsparticles": "^3.8.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
