--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.56.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.4",
     "tsparticles": "^3.8.1",
